# boom_gate

./: CMakeLists.txt
app/: main.cpp
app/private/: random_events_producer.cpp  random_events_producer.h  tick_timer.cpp  tick_timer.h
billing/: CMakeLists.txt
billing/private/: billing_system_factory.cpp  ticks_based_billing_system.cpp  ticks_based_billing_system.h
billing/public/: billing_information_listener.h  billing_system.h  billing_system_factory.h
billing/tests/: ticks_based_billing_system_test_suite.cpp
gates/: CMakeLists.txt
gates/private/: default_gate_controller.cpp  default_gate_controller.h  gate_factory.cpp  gates_controller_factory.cpp  print_gate.cpp  print_gate.h
gates/public/: gate.h  gate_factory.h  gates_controller.h  gates_controller_factory.h  gates_defs.h
gates/tests/: default_gate_controller_test_suite.cpp  print_gate_test.cpp  print_gate_test_suite.cpp
parking/: CMakeLists.txt
parking/private/: car_registry_factory.cpp  car_registry_impl.cpp  car_registry_impl.h  gate_control_strategy_factory.cpp  gate_controller_base.cpp  gate_controller_base.h  parking_factory.cpp  parking_impl.cpp  parking_impl.h  pay_on_gate_strategy.cpp  pay_on_gate_strategy.h  pay_on_parkomate_strategy.cpp  pay_on_parkomate_strategy.h  pay_on_ticket_machine_strategy.cpp  pay_on_ticket_machine_strategy.h
parking/public/: billing_information_listener.h  car_parking_time_provider.h  car_registry.h  car_registry_factory.h  cars_movement_listener.h  event.h  event_data.h  event_producer.h  event_type.h  gate_control_strategy.h  gate_control_strategy_factory.h  parking.h  parking_error_listener.h  parking_factory.h  parking_places_availability_provider.h
parking/tests/: gate_controller_base_test_suite.cpp  parking_impl_test_suite.cpp  pay_on_gate_strategy_test_suite.cpp  pay_on_ticket_machine_test_suite.cpp  tests_shared.h
payments/: CMakeLists.txt
payments/private/: card_payment_provider.h  cash_payement_provider.h  payment_system_factory.cpp  printing_card_payment_provider.cpp  printing_card_payment_provider.h  printing_cash_payment_provider.cpp  printing_cash_payment_provider.h  printing_cash_payment_provider_test_suite.h  printing_subscription_payment_provider.cpp  printing_subscription_payment_provider.h  simple_payment_system.cpp  simple_payment_system.h  subscription_card_payment_provider.h
payments/public/: card_payment_data.h  currency_amount.h  payment_result.h  payment_system.h  payment_system_factory.h  payment_type.h  payments_defs.h
payments/tests/: printing_card_payment_provider_test_suite.cpp  printing_cash_payment_provider.cpp  printing_cash_payment_provider_test_suite.cpp  printing_subscription_card_payment_provider_test_suite.cpp  simple_payment_system_test_suite.cpp
shared/public/: timer.h
